[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor = "0.0.1"
anchor-lang = "0.26.0"
reqwest = "0.11.13"
serde_json = "1.0"
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
pear_codegen = { version = "0.2.3"}


